# libzkchannels

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  build.sh  build_docker_image.sh  cbindgen.toml  env  libzkchannels.go  libzkchannels.mk  libzkchannels_test.go  rebuild.sh  setup_redis.sh  test_channels_mpc.sh  test_database.sh  test_emp.sh  test_gowrapper.sh  test_ignored.sh  test_mpcwrapper.sh  test_performance.py  test_transactions.sh
cli/: README.md  customer_establish.sh  customer_pay.sh  merchant_establish.sh  merchant_pay.sh  setup.sh
examples/: zkchannels_mpc.rs  zkchannels_zkproofs.rs
go/: libzkchannels.go  libzkchannels_test.go
include/: bindings.h  cbindings.h
src/: bindings.rs  ccs08.rs  channels.rs  channels_mpc.rs  channels_util.rs  channels_zk.rs  cl.rs  cli_mpc.rs  cli_zk.rs  database.rs  ecdsa_partial.rs  escrow_main.rs  ffishim.rs  ffishim_bls12.rs  ffishim_bn256.rs  ffishim_mpc.rs  fixed_size_array.rs  lib.rs  main.rs  mpc.rs  mpc_helpers.rs  mpc_test.rs  mpcwrapper.rs  nizk.rs  ped92.rs  test.c  test_e2e.rs  test_mpc.rs  transactions.rs  tx_main.rs  tze_utils.rs  util.rs  wallet.rs  zkproofs.rs
src/crypto/: ccs08.rs  cl.rs  mod.rs  nizk.rs  ped92.rs  pssig.rs
src/extensions/: extension.rs  intermediary.rs  mod.rs  spydermix.rs
tezos-sandbox/: README.md  dec_cust_close.json  gas_cost_benchmarks.md  pssigs_verify.py  pssigs_verify_m2.py  pssigs_verify_optimized.py  test_pairings.py  tutorial_pt1_setup.md  tutorial_pt2_zkchannels.ipynb  tutorial_pt2_zkchannels.md  zkchannel_tutorial.md  zkchannels-cli-alias.sh
tezos-sandbox/cli/: README.md  cust_close.sh  customer_establish.sh  customer_pay.sh  merch_close.sh  merchant_establish.sh  merchant_pay.sh
tezos-sandbox/docs/: gas_cost_benchmarks.md  tutorial_pt2_zkchannels.md  zkchannels_contract.md
tezos-sandbox/smartpy_scripts/: PaymentChannel.py  PsSigVerify.py  UpdatableBalance.py  smartpy_zkchannel.py  zkchannels.py
tezos-sandbox/tests_python/: README.md
tezos-sandbox/watchtower/: README.md  notification_service.py  passive_watchtower.py  passive_zkchannel_watchtower.py  simple_broadcaster.py  zkchannel_broadcaster.py
tezos-sandbox/zkchannel_sandbox/: test_pssigs_verify.py  test_pssigs_verify_fixed.py  test_zkchannel.py
tezos-sandbox/zkchannels-cli-tutorial/: mutual_close_instructions.md
tx/: clean.sh  cust_close_first_escrow.sh  cust_close_first_merch.sh  cust_close_from_escrow.sh  cust_close_from_escrow_dispute.sh  cust_close_from_merch.sh  funding_tx_testVec.py  install_bitcoind.sh  install_golang.sh  merch_claim_from_merch.sh  requirements.txt  run_gowrapper.sh  setup_utxo.sh  simple_commitment_tx.py  test_btc_transactions.py  test_scenarios_bitcoind.py  test_scenarios_btcd.py  tx_utils.py
tx/tx_builder/: README.md  btcd_tx_tester.py  digest_parser.py  make_n_utxo.py  make_utxo.py  zkChannel_regtest_cust-close.ipynb  zkChannel_regtest_merch-close_to_cust_close_to_merch_dispute.ipynb  zkChannel_regtest_merch-close_to_merch-claim.ipynb
tx/txdata_0/: signed_bump_fee_child_tx_p2wpkh_0.txt  signed_child_tx_output_0.txt  signed_cust_claim_escrow_tx_0.txt  signed_cust_claim_merch_tx_0.txt  signed_cust_close_escrow_tx_0.txt  signed_cust_close_merch_tx_0.txt  signed_dispute_from_escrow_tx_0.txt  signed_dispute_from_merch_tx_0.txt  signed_escrow_0.txt  signed_first_cust_close_escrow_tx_0.txt  signed_first_cust_close_merch_tx_0.txt  signed_merch_claim_escrow_tx_0.txt  signed_merch_claim_first_close_escrow_tx_0.txt  signed_merch_claim_first_close_merch_tx_0.txt  signed_merch_claim_merch_close_tx_0.txt  signed_merch_claim_merch_tx_0.txt  signed_merch_close_0.txt  signed_mutual_close_tx_0.txt
tx/txdata_1/: signed_bump_fee_child_tx_p2wpkh_1.txt  signed_child_tx_output_1.txt  signed_cust_claim_escrow_tx_1.txt  signed_cust_claim_merch_tx_1.txt  signed_cust_close_escrow_tx_1.txt  signed_cust_close_merch_tx_1.txt  signed_dispute_from_escrow_tx_1.txt  signed_dispute_from_merch_tx_1.txt  signed_escrow_1.txt  signed_first_cust_close_escrow_tx_1.txt  signed_first_cust_close_merch_tx_1.txt  signed_merch_claim_escrow_tx_1.txt  signed_merch_claim_first_close_escrow_tx_1.txt  signed_merch_claim_first_close_merch_tx_1.txt  signed_merch_claim_merch_close_tx_1.txt  signed_merch_claim_merch_tx_1.txt  signed_merch_close_1.txt  signed_mutual_close_tx_1.txt
tx/txdata_2/: signed_bump_fee_child_tx_p2wpkh_2.txt  signed_child_tx_output_2.txt  signed_cust_claim_escrow_tx_2.txt  signed_cust_claim_merch_tx_2.txt  signed_cust_close_escrow_tx_2.txt  signed_cust_close_merch_tx_2.txt  signed_dispute_from_escrow_tx_2.txt  signed_dispute_from_merch_tx_2.txt  signed_escrow_2.txt  signed_first_cust_close_escrow_tx_2.txt  signed_first_cust_close_merch_tx_2.txt  signed_merch_claim_escrow_tx_2.txt  signed_merch_claim_first_close_escrow_tx_2.txt  (+5 more)
tx_builder_v2/: combine_merch-close_and_fee.py  zkChannel_regtest_merch-close_to_cust_close_to_merch_dispute.ipynb
(+198 files in other folders)
