[package]
name = "zkchannels"
version = "0.4.0"
authors = ["Bolt Labs, Inc <info@boltlabs.io>"]
description = "library implements zkChannels (formerly Blind Off-chain Lightweight Transactions - BOLT)"
keywords = ["bitcoin", "zcash", "anonymous payment channels", "zkchannels"]
readme = "README.md"
homepage = "https://github.com/boltlabs-inc/libzkchannels"
repository = "https://github.com/boltlabs-inc/libzkchannels"
license = "MIT License"
build = "build.rs"
links = "token-utils"

[dependencies]
rand = "0.7"
rand_xorshift = "0.2"
redis = "0.15.1"
ff_bl = { git = "https://github.com/boltlabs-inc/ff", branch = "master" }
pairing_bl = { git = "https://github.com/boltlabs-inc/pairing", branch = "master", features = ["serde"] }
libc = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.0"
serde_bytes = "0.11"
time = "0.1"
secp256k1_boltlabs = { git = "https://github.com/boltlabs-inc/rust-secp256k1", branch = "0.15.5-partial-sig", features = ["serde"], package = "secp256k1" }
sha2 = { version = "0.8", default-features = false }
ripemd160 = "0.8"
hmac = "0.7"
bit-array = "*"
typenum = "*"
num = "*"
hex = "0.3.2"
structopt = "0.3.7"
bufstream = "0.1"
wagyu-model = { git = "https://github.com/boltlabs-inc/wagyu", branch = "feature/transactions" }
wagyu-bitcoin = { git = "https://github.com/boltlabs-inc/wagyu", branch = "feature/transactions" }
# TODO: add wagyu-zcash

[build-dependencies]
bindgen="*"
cbindgen="*"

[dev-dependencies]
rusty-fork = "0.2.1"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "zkchannels-mpc"
path = "src/main.rs"

[[bin]]
name = "zkchannels-tx"
path = "src/tx_main.rs"
